--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,31 +1,17 @@
-<!--<div class="card text-dark">-->
-  <!--<%#= image_tag "22502827_s.jpg",size: "1200x600",class: "mx-auto" %>-->
-
-  <!--<div class="card-img-overlay mx-auto d-flex align-items-center justify-content-center flex-column">-->
-
-  <!--    <h1 class="card-title font-weight-bold">About</h1>-->
-  <!--    <p class="card-text font-weight-bold">晩御飯は献立サイトです。<br>-->
-  <!--      登録した献立予定をカレンダーで簡単に確認することができます。<br>-->
-  <!--      また会員様同士でレシピを共有して楽しむこともできます。<br>-->
-  <!--      ぜひご利用ください。-->
-  <!--    </p>-->
-
-<!--  </div>-->
-<!--</div>-->
 <div class ="container">
   <div class ="row p-5">
     <div class = "col-10 mx-auto">
       <div class="card text-white">
-        <%= image_tag "oriento-dPUWgZLsOk8-unsplash.jpg", id: "img-top" %>
+        <%= image_tag "oriento-dPUWgZLsOk8-unsplash.jpg", id: "about__top--img" %>
         <div class="card-img-overlay">
-          <h1 class="text">献立作りが楽しくなる</h1>
+          <h1 class="about__top--title">献立作りが楽しくなる</h1>
           <p class="card-text">
             サイトを作ったのは、</br>
             母が「毎日違った献立を立てるのは面倒臭い」</br>
             「何を作ったのか覚えてなくて、</br>
             気づいたら同じような献立のローテーションになっている」</br>
             とよく口にしていたのがきっかけでした。</br>
-            たしかに"楽しく"献立を作れるサイトがあれば</br>
+            "楽しく"献立を作れるサイトがあれば</br>
             同じ悩みを抱える方達の役に立ち、多くの人に利用して頂けると</br>
             思いこのサイトを制作しました。</br>
             利用者様の使い勝手がいいように、親しみやすく</br>
@@ -39,20 +25,20 @@
   <div class ="row p-5"></div>
   <div class ="row">
     <div class ="col-8 mx-auto">
-      <h1 class = "recipe-title text-center">使い方</h1>
-      <%= image_tag "STEP1.png", id: "img-top" %>
+      <h1 class = "about__body--title text-center">使い方</h1>
+      <%= image_tag "STEP1.png", id: "about__body--img" %>
     </div>
   </div>
   <div class ="row p-5"></div>
   <div class ="row">
     <div class ="col-8 mx-auto">
-      <%= image_tag "STEP2.png", id: "img-top" %>
+      <%= image_tag "STEP2.png", id: "about__body--img" %>
     </div>
   </div>
   <div class ="row p-5"></div>
   <div class ="row">
     <div class ="col-8 mx-auto">
-      <%= image_tag "STEP3.png", id: "img-top" %>
+      <%= image_tag "STEP3.png", id: "about__body--img" %>
     </div>
   </div>
 
