--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,26 +1,24 @@
 <div class= "row h-500">
   <div class ="col-md-10 col-lg-10 mx-auto">
     <div class="card text-light">
-      <%#= video_tag("Pot-267.mp4", autoplay: :true, loop: :true, muted: :true, class: 'video-content') %>
-
         <% if user_signed_in? %>
-          <%= image_tag "jinomono-media-5DsTEP06774-unsplash.jpg", id: 'top-main'%>
+          <%= image_tag "jinomono-media-5DsTEP06774-unsplash.jpg", id: 'home__top--img' %>
           <div class="card-img-overlay mx-auto d-flex align-items-center justify-content-center flex-column">
-            <h1><%= link_to "ようこそ、彩の食卓へ。", home_about_path, class: "link" %></h1>
-            <p class="p-top">レシピを共有してみませんか？</br>
+            <h1><%= link_to "ようこそ、彩の食卓へ。", home_about_path, class: "home__top--link" %></h1>
+            <p class="home__top--center">レシピを共有してみませんか？</br>
                 きっと楽しい体験が待っているはずです</br>
             </p>
-            <div class="scrolldown1"><span>Scroll</span></div>
+            <div class="home__top--scrolldown"><span>Scroll</span></div>
           </div>
         <% else %>
-          <%= image_tag "dominik-martin-JYFmYif4n70-unsplash.jpg", id: 'top-main'%>
+          <%= image_tag "dominik-martin-JYFmYif4n70-unsplash.jpg", id: 'home__top--img' %>
           <div class="card-img-overlay mx-auto d-flex align-items-center justify-content-center flex-column">
-            <h1><%= link_to "ようこそ、彩の食卓へ。", new_user_registration_path, class: "link" %></h1>
-            <p class="p-top">彩の食卓は献立サイトになります</br>
+            <h1><%= link_to "ようこそ、彩の食卓へ。", new_user_registration_path, class: "home__top--link" %></h1>
+            <p class="home__top--center">彩の食卓は献立サイトになります</br>
                 全ての機能を使うには新規登録が必要です
             </p>
           </div>
-          <div class="scrolldown1"><span>Scroll</span></div>
+          <div class="home__top--scrolldown"><span>Scroll</span></div>
         <% end %>
     </div>
   </div>
@@ -28,7 +26,7 @@
 <% if user_signed_in? %>
   <div class ="row p-5">
     <div class = "col-lg-6 col-md-12 mx-auto">
-      <h1 class ="about-title", id ="top-content">
+      <h1 class ="home__body--title">
         食事の支度がスムーズに。
       </h1>
       <p>献立が立ててあると、毎日の「今日のご飯、何にしよう」がなくなります。</br>
@@ -39,11 +37,11 @@
           自然と外食することが減り、家計の節約にも繋がります。
       </p>
     </div>
-    <div class ="col-lg-5 col-md-12 offset-1 p-3 mx-auto", id= 'image-link'>
+    <div class ="col-lg-5 col-md-12 offset-1 p-3 mx-auto", id= 'home__body--link'>
       <%= link_to new_recipe_path do %>
-        <%= image_tag "todd-quackenbush-x5SRhkFajrA-unsplash.jpg", id: 'img-top'%>
-        <div class="mask">
-      		<div class="caption">
+        <%= image_tag "todd-quackenbush-x5SRhkFajrA-unsplash.jpg", id: 'home__body--img' %>
+        <div class="home__body--mask">
+      		<div class="home__body--caption">
               レシピを作成する<i class="fas fa-signature"></i>
       		</div>
       	</div>
@@ -51,18 +49,18 @@
     </div>
   </div>
   <div class ="row p-2">
-    <div class = "col-lg-5 col-md-12 mx-auto", id= 'image-link'>
+    <div class = "col-lg-5 col-md-12 mx-auto", id= 'home__body--link'>
       <%= link_to user_menus_path(current_user.id) do %>
-        <%= image_tag "luba-ertel-TdPGSnFBFtM-unsplash.jpg", id: 'img-top'%>
-        <div class="mask">
-      		<div class="caption">
+        <%= image_tag "luba-ertel-TdPGSnFBFtM-unsplash.jpg", id: 'home__body--img'%>
+        <div class="home__body--mask">
+      		<div class="home__body--caption">
               献立の予定を立てる<i class="fas fa-calendar"></i>
       		</div>
       	</div>
       <% end %>
     </div>
     <div class ="col-lg-5 col-md-12 offset-1 p-3 mx-auto">
-      <h1 class ="about-title", id ="top-content">
+      <h1 class ="home__body--title">
         食品ロスが減る
       </h1>
       <p>食品ロスが減ることも、献立を立てるメリットのひとつ。</br>
@@ -78,7 +76,7 @@
   </div>
   <div class ="row p-5">
     <div class = "col-lg-5 col-md-12 mx-auto">
-      <h1 class ="about-title", id ="top-content">
+      <h1 class ="home__body--title">
         栄養バランスを</br>　　考えるきっかけに。
       </h1>
       <p>「気付いたら1週間に4日も麺類を食べていた」</br>
@@ -92,11 +90,11 @@
           好きなものばかり食べてしまう一人暮らしさんにもおすすめです。</br>
       </p>
     </div>
-    <div class ="col-lg-5 col-md-12 offset-1 p-3 mx-auto", id= 'image-link'>
+    <div class ="col-lg-5 col-md-12 offset-1 p-3 mx-auto", id= 'home__body--link'>
       <%= link_to recipes_path do %>
-        <%= image_tag "tomoyo-s-AAptGeIAPMU-unsplash.jpg", id: 'img-top'%>
-        <div class="mask">
-      		<div class="caption">
+        <%= image_tag "tomoyo-s-AAptGeIAPMU-unsplash.jpg", id: 'home__body--img'%>
+        <div class="home__body--mask">
+      		<div class="home__body--caption">
               みんなのレシピを見てみる<i class="fas fa-utensils"></i>
       		</div>
       	</div>
@@ -107,7 +105,7 @@
   <div class ="row p-5"></div>
   <div class ="row p-5">
     <div class = "col-lg-5 col-md-12 mx-auto">
-      <h1 class ="about-title">
+      <h1 class ="home__body--title">
         献立作りが</br>楽しくなる
       </h1>
       <p>サイトを作ったのは、</br>
@@ -122,10 +120,10 @@
             すっきりとした見た目のサイトになっております。</br>
             このサイトを使う内に献立を立てるのが楽しくなるはずです。
       </p>
-      <h4 class ="text-center p-5"><%= link_to "始めてみる", new_user_registration_path, class: "btn list_btn" %></h4>
+      <h4 class ="text-center p-5"><%= link_to "始めてみる", new_user_registration_path, class: "btn application__generic--btn" %></h4>
     </div>
     <div class ="col-lg-7 col-md-12 offset-1 p-3 mx-auto">
-      <%= image_tag "henry-co-7buCxcpXHsg-unsplash.jpg", id: "img-top" %>
+      <%= image_tag "henry-co-7buCxcpXHsg-unsplash.jpg", id: "home__body--img" %>
     </div>
   </div>
 <% end %>
