--- a/app/views/lists/create.js.erb
+++ b/app/views/lists/create.js.erb
@@ -1,1 +1,1 @@
-$('#list_btn').html("<%= j(render "lists/list_btn", recipe: @recipe) %>");
+$('#application__generic--btn').html("<%= j(render "lists/list_btn", recipe: @recipe) %>");
