--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,7 +1,7 @@
-<div class="one-container p-5">
-	<h1 class="card-title-top font-weight-bold">一ヶ月の献立予定</h1>
+<div class="main-container p-5">
+	<h1 class="menu__top--title">一ヶ月の献立予定</h1>
 	<div class ="text-center">
-	  <%= link_to '一週間の予定', new_user_menu_path(current_user.id), class: 'btn list_btn' %>
+	  <%= link_to '一週間の予定', new_user_menu_path(current_user.id), class: 'btn application__generic--btn' %>
 	</div>
 	<div class ="row">
 	  <div class="col-md-12 col-lg-12", id ="month_index">
