--- a/app/views/recipes/_index.html.erb
+++ b/app/views/recipes/_index.html.erb
@@ -1,10 +1,10 @@
 <div class ="row">
   <% recipes.each do |recipe| %>
-    <div class = "recipe-box">
+    <div class = "recipe__body--box">
       <%= link_to recipe_path(recipe) do %>
         <%= image_tag recipe.get_image(400, 400) ,class: "shadow p-1 mb-5 bg-body round" %>
       <% end %>
-      <h4 class ="recipe-title"><i class="fas fa-egg"></i>   <%= recipe.recipe_name %></h4>
+      <h4 class ="recipe__body--title"><i class="fas fa-egg"></i>   <%= recipe.recipe_name %></h4>
     </div>
   <% end %>
 </div>
