--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -2,37 +2,33 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-.list_btn{
-  border-radius: 0;
-  text-decoration: none;
-  position: relative;
+.list__top--title{ //text
+  border-bottom: 1px solid #dcdcdc;
+  margin-bottom: 50px;
+  animation: SlideIn 4.8s;
 }
 
-.list_btn:before,
-.list_btn:after{
-  position: absolute;
-
-  width: 100%;
-  height: 0.5px;
-
-  content: '';
-  -webkit-transition: all .3s;
-  transition: all .3s;
-
-  background: #000;
+.list__body--box{ //recipe-box
+  margin: 20px;
+  transition-duration: 0.5s;
 }
 
-.list_btn:before {
-  top: 0;
-  left: 0;
+.list__body--box img{
+  cursor: pointer;
 }
 
-.list_btn:after {
-  right: 0;
-  bottom: 0;
+.list__body--box:hover img{
+  box-shadow: 10px 10px 10px rgba(0,0,0,0.5);
+  transform: translateY(-10px);
+  transition-duration: 0.5s;
 }
 
-.list_btn:hover:before,
-.list_btn:hover:after {
-  width: 0;
+#list__body--img:hover{ //link
+  font-size: 30px;
+}
+
+.list__body--title{ //recipe-title
+  border-bottom: 1px solid #dcdcdc;
+  margin-bottom: 50px;
+  color: #6c6c6c;
 }
