--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -2,32 +2,44 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-.rank-title{
-  font-family: ヒラギノ明朝 ProN, Hiragino Mincho ProN, sans-serif;
-  color: #6c6c6c;
+#recipe__top--link{ //image-link
+	width:			500px;
+	overflow:		hidden;
+	margin:			10px 8px 10px 16px;
+	position:		relative;
 }
 
-
-#link:hover{
-  font-size: 30px;
+#recipe__top--link .recipe__top--caption {
+	font-size:		130%;
+	text-align: 		center;
+	color:			#fff;
+	font-family: ヒラギノ明朝 ProN, Hiragino Mincho ProN, sans-serif;
 }
 
-.recipe-box{
-  margin: 20px;
-  transition-duration: 0.5s;
+#recipe__top--link .recipe__top--mask {
+	width:			100%;
+	height:			100%;
+	position:		absolute;
+	top:			0;
+	left:			0;
+	opacity:		0;
+	background-color:	rgba(0,0,0,0.3);
+	-webkit-transition:	all 0.6s ease;
+	transition:		all 0.6s ease;
 }
 
-.recipe-box img{
-  cursor: pointer;
+#recipe__top--link:hover .recipe__top--mask {
+	opacity:		1;
+	padding-top:		80px;
 }
 
-.recipe-box:hover img{
-  box-shadow: 10px 10px 10px rgba(0,0,0,0.5);
-  transform: translateY(-10px);
-  transition-duration: 0.5s;
+#recipe__top--img{ //img-top
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.font-recipe{
+.recipe__show--title{
   margin: 30px 30px;
   text-align: center;
   color: #6c6c6c;
@@ -35,28 +47,157 @@
   border-bottom: 3px dotted #000
 }
 
-.point-text{
+.recipe__body--text{ //point-text
   text-align: center;
   font-size: 1vw;
   color: #6c6c6c;
-  margin-bottom: 100px;
+  margin-bottom: 150px;
 }
 
-.text{
+#recipe__body--box{ //recipe-box
+  margin-bottom: 150px;
+}
+
+.recipe__body--title{ //recipe-title
+  border-bottom: 1px solid #dcdcdc;
+  margin-bottom: 50px;
+  color: #6c6c6c;
+}
+
+.recipe__top--title{ //text
   border-bottom: 1px solid #dcdcdc;
   margin-bottom: 50px;
   animation: SlideIn 4.8s;
 }
 
-.recipe-title{
-  border-bottom: 1px solid #dcdcdc;
-  margin-bottom: 50px;
+.rank__top--title{ //rank-title
+  font-family: ヒラギノ明朝 ProN, Hiragino Mincho ProN, sans-serif;
   color: #6c6c6c;
 }
 
-#recipe-box{
-  margin-bottom: 150px;
+.recipe__body--box{ //recipe-box
+  margin: 20px;
+  transition-duration: 0.5s;
 }
+
+.recipe__body--box img{
+  cursor: pointer;
+}
+
+.recipe__body--box:hover img{
+  box-shadow: 10px 10px 10px rgba(0,0,0,0.5);
+  transform: translateY(-10px);
+  transition-duration: 0.5s;
+}
+
+#recipe__body--img:hover{ //link
+  font-size: 30px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#img-top-rank{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.2;
+}
+
+#image-link-rank {
+	overflow:		hidden;
+}
+
+.tab-list {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+}
+/* ↓タブのデザイン↓ */
+.tab {
+  color: #6c6c6c;
+  font-family: ヒラギノ明朝 ProN, Hiragino Mincho ProN, sans-serif;
+  width: 100%;
+  padding: 10px;
+  cursor: pointer;
+  border-left: solid 1px #CCC;
+  border-bottom: solid 1px #CCC;
+}
+.tab:first-child {
+  border-left: none;
+}
+/* ↓タブがアクティブになっている時のデザイン↓ */
+.tab-active {
+  color: #fff;
+  background: #343a40;
+  transition: all 0.2s ease-in-out;
+}
+/* ↓タブの中身↓ */
+.tabbox {
+  /* ↓タブの中身を最初は非表示↓ */
+  display: none;
+  /* ↓タブの中身の余白↓ */
+  padding: 15px;
+}
+/* ↓このクラスがついている時だけタブの中身を表示↓ */
+.box-show {
+  display: block;
+}
+
+.rank_name{
+  font-size: 20px;
+  font-family: "ヒラギノ角ゴシック";
+}
+
+.card-title-top{
+  animation: SlideIn 4.8s;
+}
+
+.card-title-rank{
+  color: #000;
+}
+
+@keyframes SlideIn {
+  0% {
+    opacity: 0;/*初期状態では透明に*/
+    transform: translateX(64px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.info{
+  font-family: "ヒラギノ角ゴシック";
+  opacity: 0.7;
+  background-color:rgba(255,215,0,0.5);
+}
+
+
+
+
+
+
+
+
+
+
+
 
 .user-name{
   margin-left: 20px;
