--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,11 +2,20 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-.main-container {
-  background-image:url('spaghetti-g08eb4e1cd_1920.jpg');
-  background-position: center;
-  background-size: cover;
-  width: 100%;
-  height: 100vh;
-  padding: 20px;
+.sessions__top--title{
+  border-bottom: 1px solid #dcdcdc;
+  margin-bottom: 50px;
+  animation: SlideIn 4.8s;
+}
+
+.registrations__top--title{
+  border-bottom: 1px solid #dcdcdc;
+  margin-bottom: 50px;
+  animation: SlideIn 4.8s;
+}
+
+.user__top--title{
+  border-bottom: 1px solid #dcdcdc;
+  margin-bottom: 50px;
+  animation: SlideIn 4.8s;
 }
