--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,10 +1,10 @@
-<div class='three-container p-5'>
+<div class='main-container p-5'>
   <div class='row'>
     <div class = "mx-auto", style="width: 90%;">
       <div class ="row">
         <h3 class="font-weight-bold">コメント一覧</h3>
         <p class="p-2", id= 'page'><%= render 'page', comments_page: @comments_page %><p>
-        <%= link_to 'レシピ詳細へ戻る', recipe_path(@recipe) %>
+        <%= link_to 'レシピ詳細へ戻る', recipe_path(@recipe), class: "btn application__generic--btn" %>
       </div>
       <div>
         <table class = "table", id ='comments_index'>
