--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
-<div class="one-container p-5">
-  <h2 class="text"> 新規会員登録 </h2>
+<div class="main-container p-5">
+  <h2 class="registrations__top--title"> 新規会員登録 </h2>
   <div class ="row">
     <div class ="col-10 mx-auto">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
