--- a/app/views/favorites/favorites.html.erb
+++ b/app/views/favorites/favorites.html.erb
@@ -1,11 +1,11 @@
-<div class ="one-container p-5">
+<div class ="main-container p-5">
   <div class ="row">
     <div class ="col-12">
       <div class="row ml-3">
-        <h1 class ="text"><%= @user.name %>さん がいいねしたレシピ一覧</h1>
+        <h1 class ="favorites__top--title"><%= @user.name %>さん がいいねしたレシピ一覧</h1>
       </div>
       <% if user_signed_in? %>
-        <div class ="row p-2"><%= link_to 'マイリスト一覧', user_lists_path(current_user), class: 'btn list_btn' %></div>
+        <div class ="row p-2"><%= link_to 'マイリスト一覧', user_lists_path(current_user), class: 'btn application__generic--btn' %></div>
       <% end %>
       <%= form_tag favorites_users_path(@user), method: :get do %>
       <%= text_field_tag :search, params[:search],:placeholder => "レシピ名で検索" %>
