--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,7 +1,7 @@
-<div class='one-container p-5'>
+<div class='main-container p-5'>
   <div class='row'>
     <div class = "mx-auto", style="width: 75%;">
-    <h1 class="text">材料名一覧</h3>
+    <h1 class="food__top--title">材料名一覧</h3>
       <%= render 'layouts/errors', obj:  @food %>
       <table class = "table table-sm">
         <thead class="thead-light">
