--- a/app/views/lists/_index.html.erb
+++ b/app/views/lists/_index.html.erb
@@ -1,10 +1,10 @@
 <div class="row">
     <% @lists.each do |list| %>
-    <div class = "recipe-box">
+    <div class = "list__body--box">
       <%= link_to recipe_path(list.recipe) do %>
-        <%= image_tag list.recipe.get_image(400, 400) ,class: "shadow p-1 mb-5 bg-body round", id: "link" %>
+        <%= image_tag list.recipe.get_image(400, 400) ,class: "shadow p-1 mb-5 bg-body round" %>
       <% end %>
-      <h4 class ="recipe-title"><i class="fas fa-egg"></i>   <%= list.recipe.recipe_name %></h4>
+      <h4 class ="list__body--title"><i class="fas fa-egg"></i>   <%= list.recipe.recipe_name %></h4>
     </div>
     <% end %>
   </div>
