--- a/app/views/lists/_list_btn.html.erb
+++ b/app/views/lists/_list_btn.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %>
     <% if recipe.listed_by?(current_user) %>
-        <%= link_to "マイリスト解除", user_list_path(current_user.id, List.where(recipe_id: recipe.id), recipe_id: recipe.id), method: :delete, remote: true, class: "btn list_btn" %>
+        <%= link_to "マイリスト解除", user_list_path(current_user.id, List.where(recipe_id: recipe.id), recipe_id: recipe.id), method: :delete, remote: true, class: "btn application__generic--btn" %>
     <% else %>
-        <%= link_to "マイリストに追加", user_lists_path(current_user.id, recipe_id: recipe.id), method: :post, remote: true , class: "btn list_btn" %>
+        <%= link_to "マイリストに追加", user_lists_path(current_user.id, recipe_id: recipe.id), method: :post, remote: true , class: "btn application__generic--btn" %>
     <% end %>
 <% end %>
