--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,10 +1,10 @@
-<div class ="one-container p-5">
+<div class ="main-container p-5">
   <div class ="row">
     <div class ="col-md-12">
       <div class="row ml-3">
-        <h1 class ="text">マイリスト</h1>
+        <h1 class ="list__top--title">マイリスト</h1>
       </div>
-      <div class ="row p-2"><%= link_to 'レシピ一覧', recipes_path, class: 'btn list_btn' %></div>
+      <div class ="row p-2"><%= link_to 'レシピ一覧', recipes_path, class: 'btn application__generic--btn' %></div>
       <%= form_tag user_lists_path(current_user.id), method: :get do %>
       <%= text_field_tag :search, params[:search],:placeholder => "レシピ名で検索" %>
           <%= button_tag type: 'submit', class: 'btn btn-light btn-sm' do %>
