--- a/app/views/menus/_mylists.html.erb
+++ b/app/views/menus/_mylists.html.erb
@@ -4,9 +4,9 @@
     <tr>
       <% current_user.lists.each do |list| %>
         <td>
+          <%= list.recipe.recipe_name %></br>
           <%= link_to recipe_path(list.recipe) do %>
-            <%= list.recipe.recipe_name %></br>
-            <div class = "recipe-box">
+            <div class = "menu__body--box">
               <%= image_tag list.recipe.get_image(150, 150) ,class: "shadow mb-5 bg-body round" %>
             </div>
           <% end %>
