--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -1,7 +1,7 @@
-<div class="one-container p-5">
-	<h1 class="card-title-top font-weight-bold">一週間の献立予定</h1>
+<div class="main-container p-5">
+	<h1 class="menu__top--title">一週間の献立予定</h1>
 	<div class ="text-center">
-	  <%= link_to '一ヶ月の予定', user_menus_path(current_user.id), class: 'btn list_btn' %>
+	  <%= link_to '一ヶ月の予定', user_menus_path(current_user.id), class: 'btn application__generic--btn' %>
 	</div>
 	<div class ="row">
 	  <div class="col-md-12 col-sm-12 col-xs-12", id ="week_index">
