--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,5 +1,5 @@
-<div class = "one-container p-5">
-    <h1 class="card-title-top font-weight-bold">レシピ編集</h1>
+<div class = "main-container p-5">
+    <h1 class="recipe__top--title">レシピ編集</h1>
     <%= render 'layouts/errors', obj:  @recipe %>
     <%= form_with model: @recipe, url: recipe_path(@recipe), method: :patch, local: true do |f| %>
         <%= render 'form', f: f, recipe: @recipe %>
