--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,5 +1,5 @@
-<div class = "one-container p-5">
-    <h1 class ="text">レシピ作成</h1>
+<div class = "main-container p-5">
+    <h1 class ="recipe__top--title">レシピ作成</h1>
     <%= render 'layouts/errors', obj:  @recipe %>
     <%= form_with model: @recipe, url: recipes_path(@recipe), method: :post, local: true do |f| %>
         <%= render 'form', f: f, recipe: @recipe %>
