--- a/app/views/relationships/_btn.html.erb
+++ b/app/views/relationships/_btn.html.erb
@@ -3,8 +3,8 @@
 <% end %>
 <% if current_user != user%>
   <% if current_user.following?(user) %>
-    <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, remote: true, class: "btn list_btn" %>
+    <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, remote: true, class: "btn application__generic--btn" %>
   <% else %>
-    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, remote: true, class: "btn list_btn" %>
+    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, remote: true, class: "btn application__generic--btn" %>
   <% end %>
 <% end %>
