--- a/app/views/relationships/followers.html.erb
+++ b/app/views/relationships/followers.html.erb
@@ -1,5 +1,5 @@
 <% if @users.exists? %>
-  <div class='one-container p-5'>
+  <div class='main-container p-5'>
     <div class='row'>
       <div class = "mx-auto", style="width: 75%;">
         <div class ="row">
@@ -11,5 +11,5 @@
     </div>
   </div>
 <% else %>
-  <p>ユーザーはいません</p>
+  <h2 class ="relationships__top--conten p-5">ユーザーはいません</h2>
 <% end %>
