--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<div class='one-container p-5'>
+<div class='main-container p-5'>
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h3 class="font-weight-bold"><%= @user.name %> さんの会員情報編集</h3>
@@ -15,9 +15,9 @@
           </tr>
         </table>
         <div class="col-sm-12 offset-md-3">
-          <%= f.submit "編集内容を保存", class: "btn btn-primary" %>
+          <%= f.submit "編集内容を保存", class: "btn btn-primary btn-sm" %>
           <!--論理削除-->
-          <%= link_to "退会する", unsubscribe_users_path(@user), class: "btn btn-danger" %>
+          <%= link_to "退会する", unsubscribe_users_path(@user), class: "btn btn-danger btn-sm" %>
         </div>
       <% end %>
     </div>
