--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
-<div class='one-container p-5'>
-  <h1 class ="text">会員一覧</h1>
+<div class='main-container p-5'>
+  <h1 class ="user__top--title">会員一覧</h1>
   <div class='row'>
     <div class = "mx-auto", style="width: 75%;">
       <%= render 'index', users: @users %>
