--- a/app/views/users/unsubscribe.html.erb
+++ b/app/views/users/unsubscribe.html.erb
@@ -1,5 +1,6 @@
-<div class="text-center mt-5 mb-4">
-      <h3><span class="font-weight-bold">本当に退会しますか？</span></h3>
+<div class ="main-container">
+  <div class="text-center mt-5 mb-4">
+    <h3><span class="font-weight-bold">本当に退会しますか？</span></h3>
     </div>
 
     <div class="text-center">
@@ -11,4 +12,5 @@
       <%= link_to "退会する", withdrawal_users_path, method: :patch,class: "btn btn-danger col-1 ml-4", data: { confilm: "本当に退会しますか？" } %>
       <%= link_to "退会しない", user_path(current_user), class: "btn btn-primary col-1" %>
     </div>
+  </div>
 </div>
