--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
       </button>
     </div>
     <div class="text-center">
-      <span>bangohan &copy; All Right Reserved.</span>
+      <span>彩の食卓 &copy; All Right Reserved.</span>
     </div>
   </footer>
 </html>
