--- a/app/views/lists/create.js.erb
+++ b/app/views/lists/create.js.erb
@@ -1,1 +1,2 @@
 $('#application__generic--btn').html("<%= j(render "lists/list_btn", recipe: @recipe) %>");
+$('#list_flash').html("<%= j(render "layouts/notice_flash") %>");
