--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -99,7 +99,7 @@
             <h2 class ="recipe__body--title">コメント</h2>
             <div id = 'comments'>
                 <table class = "table">
-                    <%= render 'comments/comments', recipe: @recipe, comments: @comments %>
+                    <%= render 'comments/comments', recipe: @recipe, comments: @comments, comment: @comment %>
                 </table>
             </div>
             <div id = 'comment_form'>
