--- a/app/views/relationships/create.js.erb
+++ b/app/views/relationships/create.js.erb
@@ -1,1 +1,2 @@
 $('#relationship_btn').html("<%= j(render "relationships/btn", user: @user) %>");
+$('#list_flash').html("<%= j(render "layouts/notice_flash") %>");
