--- a/app/views/menus/_week_index.html.erb
+++ b/app/views/menus/_week_index.html.erb
@@ -1,3 +1,12 @@
+<% if obj.errors.any? %>
+  <div id="error_explanation" class="alert alert-danger">
+    <ul>
+      <% obj.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
 <%= week_calendar events: menus do |date, menus| %>
   <%= date.day %>
 
