--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -5,10 +5,9 @@
 	</div>
 	<div class ="row">
 	  <div class="col-md-12 col-lg-12", id ="month_index">
-  		<%= render 'month_index', menus: @menus %>
+  		<%= render 'month_index', menus: @menus, obj: @menu %>
     </div>
 	</div>
-	<%= render 'layouts/errors', obj: @menu %>
 	<div class ="row">
 	  <div class ="col-lg-3 col-md-5", id= "menu_form">
 	    <%= render 'menu_form', menu: @menu %>
