--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -5,10 +5,9 @@
 	</div>
 	<div class ="row">
 	  <div class="col-md-12 col-sm-12 col-xs-12", id ="week_index">
-  		<%= render 'week_index', menus: @menus %>
+  		<%= render 'week_index', menus: @menus, obj: @menu%>
     </div>
 	</div>
-	<%= render 'layouts/errors', obj: @menu %>
 	<div class ="row">
 	  <div class ="col-lg-3 col-md-5">
 	    <%= render 'menu_form', menu: @menu %>
