[Fix]材料名登録非同期フラッシュメッセージ追加

--- a/app/views/foods/_foods.html.erb
+++ b/app/views/foods/_foods.html.erb
@@ -1,8 +1,9 @@
 <% foods.each do |food| %>
   <tr>
+    <td></td>
     <td><%= food.food_name %></td>
     <td><%= food.unit %></td>
-    <td><%= link_to '削除', food_path(food), method: :delete, remote: true, class: 'btn btn-danger' %></td>
+    <td><%= link_to '削除', food_path(food), method: :delete, remote: true, class: 'btn btn-danger btn-sm' %></td>
   </tr>
 <% end %>
 <td><%= paginate foods %></td>
