--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,11 +1,11 @@
 <div class='main-container p-5'>
   <div class='row'>
-    <div class = "mx-auto", style="width: 75%;">
+    <div class = "mx-auto", style="width: 60%;">
     <h1 class="food__top--title">材料名一覧</h3>
     <div id ="food_errors">
       <%= render 'layouts/errors', obj: @food %>
     </div>
-      <table class = "table table-sm">
+      <table class = "table table-sm text-center" style= "width: 80%">
         <thead class="thead-light">
           <th>材料名</th>
           <th>単位</th>
@@ -17,7 +17,7 @@
       </table>
       <%= render 'food_form', food: @food %>
       <div class="text-center">
-        <%= link_to "レシピ新規登録へ戻る", new_recipe_path, class: "btn btn-info" %>
+        <%= link_to "レシピ新規登録へ戻る", new_recipe_path, class: "btn application__generic--btn" %>
       </div>
     </div>
   </div>
