--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -49,7 +49,7 @@
 
 .recipe__body--text{ //point-text
   text-align: center;
-  font-size: 1vw;
+  font-size: 1rem;
   color: #6c6c6c;
   margin-bottom: 150px;
 }
