[Fix]注意書きの追加

--- a/app/views/foods/_food_form.html.erb
+++ b/app/views/foods/_food_form.html.erb
@@ -4,4 +4,5 @@
     <td><%= f.text_field :unit, placeholder: "単位を記入", class: "food_unit" %></td>
     <td><%= f.submit '追加する', class: 'btn btn-primary btn-sm' %></td>
   </table>
+  <p>※調味料は単位を入れないでください</p>
 <% end %>
