--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -73,7 +73,7 @@
                                 class: 'btn application__generic--btn',
                                 data: {
                                   association_insertion_node: 'tbody#table-body', #挿入先を指定
-                                  association_insertion_method: 'after'    #挿入を前にする
+                                  association_insertion_method: 'after'    #挿入を後にする
                                 }
                             %>
               </div>
