--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,13 +1,13 @@
 <div class='main-container p-5'>
   <div class='row'>
     <div class = "mx-auto", style="width: 60%;">
-    <h1 class="food__top--title">材料名一覧</h3>
+    <h1 class="food__top--title">材料・調味料名一覧</h3>
     <div id ="food_errors">
       <%= render 'layouts/errors', obj: @food %>
     </div>
       <table class = "table table-sm text-center" style= "width: 80%">
         <thead class="thead-light">
-          <th>材料名</th>
+          <th>材料・調味料名</th>
           <th>単位</th>
           <th></th>
         </thead>
