[Fix]注意書き追加2

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -32,11 +32,11 @@
             </tr>
             <tr>
                 <th><p><%= f.label :background, "生い立ち" %></p></th>
-                <td><p><%= f.text_area :background, placeholder: "例）◯◯番組で紹介されていたので作ってみました！", size: "50x5" %></p></td>
+                <td><p><%= f.text_area :background, placeholder: "140文字以内で記述してください。", size: "50x5" %></p></td>
             </tr>
             <tr>
                 <th><p><%= f.label :point, "ポイント" %></p></th>
-                <td><p><%= f.text_area :point, placeholder: "例）お肉の下準備が大事です！", size: "50x5" %></p></td>
+                <td><p><%= f.text_area :point, placeholder: "140文字以内で記述してください。", size: "50x5" %></p></td>
             </tr>
             <tr>
                 <th></th>
