--- a/app/assets/stylesheets/menus.scss
+++ b/app/assets/stylesheets/menus.scss
@@ -32,3 +32,12 @@
   margin-bottom: 50px;
   color: #6c6c6c;
 }
+
+#menu_form{
+  margin-top: 30px;
+  margin-left: 30px;
+}
+
+#menu_mylists{
+  margin-top: 30px;
+}
