--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -9,10 +9,10 @@
     </div>
 	</div>
 	<div class ="row">
-	  <div class ="col-lg-3 col-md-5", id= "menu_form">
+	  <div class ="col-lg-5 col-md-5", id= "menu_form">
 	    <%= render 'menu_form', menu: @menu %>
 	  </div>
-	  <div class ="col-lg-8 col-md-6 offset-md-1">
+	  <div class ="col-lg-5 col-md-5 offset-md-1", id= "menu_mylists">
 	    <%= render 'mylists' %>
 	  </div>
 	</div>
